Step_1 Step_2 Step_3

--- a/Step_1_Step_2_Step_3_sanction_list.ipynb
+++ b/Step_1_Step_2_Step_3_sanction_list.ipynb
@@ -373,8 +373,7 @@
         "    \"sanctions\", \"criminal\", \"crime\", \"corruption\", \"shell company\", \"criminal case\", \"arrested\"\n",
         "]\n",
         "keywords_score_5 = [\n",
-        "    \"court\", \"accusation\", \"penalty\", \"investigation\", \"insolvency\", \"violation\", \"debt\",\n",
-        "    \"arrested\", \"blackmail\"\n",
+        "    \"court\", \"accusation\", \"penalty\", \"investigation\", \"insolvency\", \"violation\", \"debt\", \"blackmail\"\n",
         "]\n",
         "keywords_score_0 = [\"stock\", \"stock price\"]\n",
         "\n",
@@ -469,10 +468,11 @@
         "df_results = pd.DataFrame(data)\n",
         "\n",
         "# Save the DataFrame to a CSV file with proper encoding and escaping\n",
-        "output_file_path = 'Step_3_with_scores.csv'  # Replace with desired file path\n",
+        "output_file_path = 'Step_3_company_analysis_with_scores.csv'  # Replace with desired file path\n",
         "df_results.to_csv(output_file_path, index=False, escapechar='\\\\', encoding='utf-8', quoting=csv.QUOTE_ALL)\n",
         "\n",
         "print(f\"Data saved to {output_file_path}.\")\n",
+        "\n",
         "\n"
       ],
       "metadata": {
