--- a/Step_1_Step_2_Step_3_Step_4_sanction_list.ipynb
+++ b/Step_1_Step_2_Step_3_Step_4_sanction_list.ipynb
@@ -26,6 +26,172 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# 📚 **Jupyter Notebook Documentation**\n",
+        "\n",
+        "## **1. Project Overview**\n",
+        "This notebook is designed to analyze company data and compare it against global sanction lists. It leverages **Natural Language Processing (NLP)**, **web scraping**, and **fuzzy string matching** to identify potential risks.\n",
+        "The project aims to:\n",
+        "- Identify company names that match sanctioned entities.\n",
+        "- Analyze textual information from online sources.\n",
+        "- Calculate risk scores based on keyword proximity, sentiment, and match accuracy.\n",
+        "- Present results in a structured format for decision-making.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **2. Key Libraries Used**\n",
+        "### **Data Manipulation**\n",
+        "- **pandas:** Data manipulation and analysis.\n",
+        "- **numpy:** Numerical operations and array handling.\n",
+        "\n",
+        "### **Text Analysis**\n",
+        "- **spacy:** Natural Language Processing tasks.\n",
+        "- **nltk:** Sentiment analysis and text tokenization.\n",
+        "- **fuzzywuzzy:** String matching and approximate name comparisons.\n",
+        "\n",
+        "### **Web Scraping**\n",
+        "- **selenium:** Automate web interaction and extract data.\n",
+        "- **bs4 (BeautifulSoup):** Parse and scrape webpage content.\n",
+        "- **requests:** HTTP library for fetching data.\n",
+        "\n",
+        "### **Search Integration**\n",
+        "- **googleapiclient.discovery:** Access Google's APIs.\n",
+        "\n",
+        "### **Parallel Processing**\n",
+        "- **multiprocessing:** Process data in parallel to optimize performance.\n",
+        "- **concurrent.futures:** Simplify parallel execution of tasks.\n",
+        "\n",
+        "### **Time Management**\n",
+        "- **datetime:** Handle timestamps.\n",
+        "- **time:** Introduce delays and measure execution time.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **3. Workflow Structure**\n",
+        "### **Step 1: Data Collection**\n",
+        "- Download datasets from official sources or local files.\n",
+        "- Parse CSV files containing company and sanction data.\n",
+        "\n",
+        "### **Step 2: Data Cleaning**\n",
+        "- Remove duplicates and unnecessary entries.\n",
+        "- Standardize text fields (e.g., lowercase, removing special characters).\n",
+        "\n",
+        "### **Step 3: Fuzzy Matching**\n",
+        "- Match company names from datasets using fuzzy string matching.\n",
+        "- Calculate similarity scores to estimate matching accuracy.\n",
+        "\n",
+        "### **Step 4: Web Scraping**\n",
+        "- Scrape additional data from websites using Selenium and Google Search.\n",
+        "- Extract key textual information for analysis.\n",
+        "\n",
+        "### **Step 5: NLP Analysis**\n",
+        "- Analyze sentiment of extracted text.\n",
+        "- Identify keywords and evaluate their proximity to company names.\n",
+        "\n",
+        "### **Step 6: Risk Scoring**\n",
+        "- Assign risk scores based on similarity, keyword presence, and sentiment.\n",
+        "- Flag high-risk entities for review.\n",
+        "\n",
+        "### **Step 7: Results Compilation**\n",
+        "- Combine results into a final report.\n",
+        "- Export results as CSV or Excel files.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **4. Functions Defined**\n",
+        "### **Data Processing Functions**\n",
+        "- **process_companies:** Processes the input company dataset.\n",
+        "- **process_company:** Handles individual company entries.\n",
+        "\n",
+        "### **Text Matching Functions**\n",
+        "- **calculate_score:** Calculates similarity scores.\n",
+        "- **approximate_match:** Matches company names approximately.\n",
+        "\n",
+        "### **Web Scraping Functions**\n",
+        "- **google_search:** Performs Google searches.\n",
+        "- **bing_search_scrape:** Scrapes Bing search results.\n",
+        "- **extract_text_from_url:** Extracts text from web pages.\n",
+        "\n",
+        "### **NLP Functions**\n",
+        "- **analyze_text_with_nlp:** Analyzes text sentiment and entities.\n",
+        "- **clean_text:** Cleans text for NLP processing.\n",
+        "\n",
+        "### **Validation Functions**\n",
+        "- **is_valid_url:** Checks if a URL is valid.\n",
+        "- **is_dictionary_page:** Validates web content structure.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **5. Key Variables**\n",
+        "### **Data Sources**\n",
+        "- `sanction_list_file_path`: Path to the sanction list file.\n",
+        "- `uploaded_file_path`: Path to the uploaded company data file.\n",
+        "- `url1`, `url2`: URLs for online datasets.\n",
+        "\n",
+        "### **Processed DataFrames**\n",
+        "- `companies_df`: DataFrame containing company data.\n",
+        "- `sanction_list_df`: DataFrame containing sanction data.\n",
+        "\n",
+        "### **Web Scraping Variables**\n",
+        "- `driver`: Selenium WebDriver for automation.\n",
+        "- `user_agents`: List of user agent strings for HTTP requests.\n",
+        "\n",
+        "### **Analysis Variables**\n",
+        "- `sentiment_score`: Sentiment analysis score.\n",
+        "- `all_scores`: Aggregated risk scores.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **6. Results and Outputs**\n",
+        "- **Cleaned Dataset:** Final cleaned dataset of companies with risk assessments.\n",
+        "- **Sanction Matches:** Identified matches between companies and sanction lists.\n",
+        "- **Web Insights:** Insights extracted from online searches.\n",
+        "- **Risk Report:** Structured report highlighting high-risk companies.\n",
+        "\n",
+        "### **Output Formats**\n",
+        "- CSV files with processed data.\n",
+        "- Printable risk assessment summaries.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **7. How to Run the Notebook**\n",
+        "### **Step 1: Install Dependencies**\n",
+        "Ensure the required libraries are installed:\n",
+        "```bash\n",
+        "pip install pandas fuzzywuzzy selenium spacy nltk requests beautifulsoup4 google-api-python-client\n",
+        "python -m spacy download en_core_web_sm\n",
+        "```\n",
+        "\n",
+        "### **Step 2: Update File Paths**\n",
+        "Update the paths to your input datasets and API keys if required.\n",
+        "\n",
+        "### **Step 3: Execute Cells Sequentially**\n",
+        "Run the cells from top to bottom. Ensure that:\n",
+        "- The datasets are accessible.\n",
+        "- Required web APIs are enabled.\n",
+        "\n",
+        "### **Step 4: Review Outputs**\n",
+        "Check the final output files for risk assessments and insights.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## **8. Troubleshooting**\n",
+        "- Ensure dependencies are correctly installed.\n",
+        "- Validate API keys and URLs.\n",
+        "- Check network connectivity for web scraping tasks.\n",
+        "- Adjust timeouts in Selenium if requests are failing.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "This documentation is intended to make the notebook accessible to beginners and experienced users alike. If you encounter any issues, feel free to reach out for help!\n"
+      ],
+      "metadata": {
+        "id": "mzvraX9ZFGnU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install google-search-results\n",
@@ -43,7 +209,7 @@
         "id": "hFZ4Whe53TKl",
         "outputId": "492686c0-9df3-4071-ef9e-bcffc2516cda"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1123,7 +1289,7 @@
         "id": "YupNqXcZm8zp",
         "outputId": "c00a19f0-393d-4c07-d164-5cd5eca57be7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1208,7 +1374,7 @@
         "id": "uylK4_6alYZ9",
         "outputId": "db60e3b1-266c-4282-cb7d-14f7470392d1"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
