--- a/Web Scraping/Advanced_Search_Test_AI_project.ipynb
+++ b/Web Scraping/Advanced_Search_Test_AI_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1lgxomVv3CeBrp8s7kj/M",
+      "authorship_tag": "ABX9TyMVOND/PLg7PHaAvOlPtPQf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/NataKrj/AI-project-2024/blob/main/Advanced_Search_Test_AI_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/NataKrj/AI-project-2024/blob/main/Web%20Scraping/Advanced_Search_Test_AI_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -401,7 +401,7 @@
         "id": "FDpMYS3U17zQ",
         "outputId": "8bb1349a-7b90-4947-f4d2-ce753743c88d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +506,7 @@
         "id": "rkvIFG4p1-cp",
         "outputId": "6746dde4-6a10-40b1-9f7c-24d2f0c12a7c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +633,7 @@
         "id": "6_KrCU7F2FbB",
         "outputId": "fc80b4fd-9d44-49c0-a2ae-f6297022178f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +758,7 @@
       "metadata": {
         "id": "ImmKQQkJIR7u"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -773,7 +773,7 @@
         "id": "XlJhAzW0JaPc",
         "outputId": "109292a4-447f-4a9d-d157-f1c973ad2b10"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +803,7 @@
         "id": "f-T3fqoPJny6",
         "outputId": "4ad98b0b-21d7-47bb-91b6-6f87be59bd86"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1793,7 +1793,7 @@
         "id": "1gPU-PT4HFAq",
         "outputId": "56826bdd-66e6-49eb-f026-3b86f99b6bdb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2788,7 +2788,7 @@
         "id": "Bt0BKGa63QzE",
         "outputId": "2479fbe2-19c1-4d69-ed3e-244da53f8c8b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2892,7 +2892,7 @@
         "id": "HdMam4fa3RWc",
         "outputId": "ecbcb32e-1636-4ea7-a078-ccc04b6ad71b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3072,7 +3072,7 @@
         "id": "xd8lhK_3MWzQ",
         "outputId": "b0336810-7365-4971-dd3a-5fc5183666b4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3423,7 +3423,7 @@
         "id": "ZCEr4FqzM1fj",
         "outputId": "d2d5ab62-6604-4215-ae65-8dc5ef1e5e38"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3527,7 +3527,7 @@
         "id": "5ha35kooN42r",
         "outputId": "1f874499-3cfc-4c75-c3c8-f9e2af6fbecc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3915,7 +3915,7 @@
         "id": "RYhOcDKyO8Ru",
         "outputId": "6da82e5e-b425-4939-f274-2fa7ef65b178"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4016,7 +4016,7 @@
         "id": "YNz9xSsWN8IH",
         "outputId": "fb65334d-6a9c-42fc-951e-d95fe1951beb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4078,7 +4078,7 @@
         "id": "QBdEzDMrVGkd",
         "outputId": "1626e3a3-90fd-4ef2-931c-5db5f7188a51"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4120,7 +4120,7 @@
         "        return {\"error\": f\"API request failed with status code {response.status_code}\"}\n",
         "\n",
         "# API Key (replace with your own)\n",
-        "api_key = \"AIzaSyAdvYvIs5CSyETTh0YETHGKv3haP0rS2Ec\"\n",
+        "api_key = \"xxx\"\n",
         "\n",
         "# Query the API for the first 10 company names\n",
         "enriched_data = []\n",
@@ -4143,7 +4143,7 @@
         },
         "outputId": "bd65e0da-a4b5-4f77-e682-682d74851005"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4232,7 +4232,7 @@
         },
         "outputId": "00dfe0f1-eb11-4ad7-d483-71818e7f8b3f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4516,7 +4516,7 @@
         },
         "outputId": "278c2f9a-6c31-4bd4-95e7-2b8a1af13bd9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
