--- a/MongoDB and Visualization/Import_in_Mongo_and_visualize.ipynb
+++ b/MongoDB and Visualization/Import_in_Mongo_and_visualize.ipynb
@@ -17,27 +17,36 @@
     {
       "cell_type": "code",
       "source": [
-        "#Import csv final Step 4 results\n",
-        "\n",
         "import pandas as pd\n",
         "import io\n",
         "import requests\n",
         "\n",
-        "# URL\n",
-        "url = \"https://github.com/NataKrj/AI-project-2024/raw/main/Results%2026.12.2024/Step_4.1_company_risk_scores.csv\"\n",
-        "s = requests.get(url).content\n",
-        "# For the delimiter and error handling\n",
-        "c = pd.read_csv(io.StringIO(s.decode('utf-8')), sep=',', on_bad_lines='skip', engine='python')\n",
+        "# URL to the CSV file\n",
+        "url = \"https://github.com/NataKrj/AI-project-2024/raw/main/Results%2026.12.2024/Step_4_company_risk_scores.csv\"\n",
         "\n",
+        "# Fetch the content from the URL\n",
+        "response = requests.get(url).content\n",
         "\n",
-        "print(c.head())"
+        "# Save the file locally\n",
+        "file_name = \"Step_4_company_risk_scores.csv\"\n",
+        "with open(file_name, \"wb\") as f:\n",
+        "    f.write(response)\n",
+        "\n",
+        "# Now the file is visible in Colab's file browser\n",
+        "print(f\"File saved as: {file_name}\")\n",
+        "\n",
+        "# Load the CSV into a pandas DataFrame\n",
+        "df = pd.read_csv(file_name, sep=',', on_bad_lines='skip', engine='python')\n",
+        "\n",
+        "# Display the first few rows of the DataFrame\n",
+        "print(df.head())\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "AD0BnxvXo2Yl",
-        "outputId": "7fb2b04e-d037-4d6c-dc40-ec5794cb2c19"
+        "id": "QTPaZVSV_NEf",
+        "outputId": "f0a6d4b7-4637-4e6d-8785-daf630fd4ce9"
       },
       "execution_count": null,
       "outputs": [
@@ -45,19 +54,20 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "          company_name Sanctioned Names          Status      matched_keywords  \\\n",
-            "0                   9g         No Match           error  No relevant keywords   \n",
-            "1  a.b.c. kickers bvba         No Match  ENT LP Stopped  No relevant keywords   \n",
-            "2       a.d. froidmont         No Match      EU Stopped                 court   \n",
-            "3        a.f. security         No Match      EU Stopped                   NaN   \n",
-            "4        a.f.m. new sa         No Match           error                   NaN   \n",
+            "File saved as: Step_4_company_risk_scores.csv\n",
+            "          company_name Sanctioned Names                       Status  \\\n",
+            "0                   9g         No Match                        error   \n",
+            "1  a.b.c. kickers bvba         No Match               ENT LP Stopped   \n",
+            "2       a.d. froidmont         No Match                   EU Stopped   \n",
+            "3        a.f. security         No Match                   EU Stopped   \n",
+            "4        a.f.m. new sa         No Match  not found in KBO data table   \n",
             "\n",
-            "   Total_Score risk_level  \n",
-            "0         12.0       high  \n",
-            "1         10.0       high  \n",
-            "2         15.0       high  \n",
-            "3          5.0     medium  \n",
-            "4          2.0     medium  \n"
+            "       matched_keywords  Total_Score risk_level  \n",
+            "0  No relevant keywords          2.0     medium  \n",
+            "1  No relevant keywords          5.0     medium  \n",
+            "2                 court         10.0     medium  \n",
+            "3  No relevant keywords          5.0     medium  \n",
+            "4  No relevant keywords          2.0     medium  \n"
           ]
         }
       ]
@@ -73,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KXGjpZDszQEQ",
-        "outputId": "44e3f5a5-90a4-46de-a88a-420a8d0c6710"
+        "outputId": "7f7d6fc5-40b2-4e88-ccfd-d49536c81cc5"
       },
       "execution_count": null,
       "outputs": [
@@ -96,7 +106,7 @@
         "from io import StringIO\n",
         "\n",
         "# MongoDB connection setup\n",
-        "uri = \"mongodb+srv://xxxxxxxxxxxxxxx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"  # Replace with your MongoDB URI\n",
+        "uri = \"mongodb+srv://xxxxxxxxxxx@cluster0.lu6vo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"  # Replace with your MongoDB URI\n",
         "client = MongoClient(uri)\n",
         "\n",
         "# Test the connection\n",
@@ -114,7 +124,7 @@
         "collection = db[collection_name]\n",
         "\n",
         "# Path to the uploaded CSV file\n",
-        "file_path = 'Step_4.1_company_risk_scores.csv'\n",
+        "file_path = 'Step_4_company_risk_scores.csv'\n",
         "\n",
         "try:\n",
         "    # Load the CSV content into a DataFrame\n",
@@ -122,7 +132,7 @@
         "        file_path,\n",
         "        sep=',',             # delimiter\n",
         "        quotechar='\"',\n",
-        "        on_bad_lines='skip', # Skip problematic rows\n",
+        "        on_bad_lines='skip',\n",
         "        engine='python'      # Use Python engine--> adjusted\n",
         "    )\n",
         "\n",
@@ -170,7 +180,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-bA-d1xe7LMH",
-        "outputId": "f2b21708-7f8a-42ba-db3a-566b30efe92a"
+        "outputId": "6592a7b0-2fbb-40b8-90cd-873cddf3a7e6"
       },
       "execution_count": null,
       "outputs": [
@@ -180,66 +190,24 @@
           "text": [
             "Successfully connected to MongoDB!\n",
             "Preview of the imported DataFrame:\n",
-            "          company_name Sanctioned Names          Status      matched_keywords  \\\n",
-            "0                   9g         No Match           error  No relevant keywords   \n",
-            "1  a.b.c. kickers bvba         No Match  ENT LP Stopped  No relevant keywords   \n",
-            "2       a.d. froidmont         No Match      EU Stopped                 court   \n",
-            "3        a.f. security         No Match      EU Stopped                   NaN   \n",
-            "4        a.f.m. new sa         No Match           error                   NaN   \n",
+            "          company_name Sanctioned Names                       Status  \\\n",
+            "0                   9g         No Match                        error   \n",
+            "1  a.b.c. kickers bvba         No Match               ENT LP Stopped   \n",
+            "2       a.d. froidmont         No Match                   EU Stopped   \n",
+            "3        a.f. security         No Match                   EU Stopped   \n",
+            "4        a.f.m. new sa         No Match  not found in KBO data table   \n",
             "\n",
-            "   Total_Score risk_level  \n",
-            "0         12.0       high  \n",
-            "1         10.0       high  \n",
-            "2         15.0       high  \n",
-            "3          5.0     medium  \n",
-            "4          2.0     medium  \n",
+            "       matched_keywords  Total_Score risk_level  \n",
+            "0  No relevant keywords          2.0     medium  \n",
+            "1  No relevant keywords          5.0     medium  \n",
+            "2                 court         10.0     medium  \n",
+            "3  No relevant keywords          5.0     medium  \n",
+            "4  No relevant keywords          2.0     medium  \n",
             "\n",
             "Number of columns in DataFrame: 6\n",
             "Column Names: ['company_name', 'Sanctioned Names', 'Status', 'matched_keywords', 'Total_Score', 'risk_level']\n",
             "\n",
-            "Warning: Missing values detected in the following rows:\n",
-            "                  company_name Sanctioned Names                       Status  \\\n",
-            "3                a.f. security         No Match                   EU Stopped   \n",
-            "4                a.f.m. new sa         No Match                        error   \n",
-            "5                     a.m.d.i.         No Match  not found in KBO data table   \n",
-            "6          aan de watergang nv         No Match  not found in KBO data table   \n",
-            "7                    abi place         No Match                ENT LP Active   \n",
-            "..                         ...              ...                          ...   \n",
-            "488  vlaamse judofederatie vzw         No Match                    EU Active   \n",
-            "490               watelet sprl         No Match                        error   \n",
-            "491                    webkrea         No Match                        error   \n",
-            "493                will-pharma         No Match                    EU Active   \n",
-            "495                  x-sanatec         No Match                ENT LP Active   \n",
-            "\n",
-            "    matched_keywords  Total_Score risk_level  \n",
-            "3                NaN          5.0     medium  \n",
-            "4                NaN          2.0     medium  \n",
-            "5                NaN          2.0     medium  \n",
-            "6                NaN          2.0     medium  \n",
-            "7                NaN          1.0     medium  \n",
-            "..               ...          ...        ...  \n",
-            "488              NaN          1.0     medium  \n",
-            "490              NaN          2.0     medium  \n",
-            "491              NaN          2.0     medium  \n",
-            "493              NaN          1.0     medium  \n",
-            "495              NaN          1.0     medium  \n",
-            "\n",
-            "[260 rows x 6 columns]\n",
-            "\n",
-            "Data after filling missing values:\n",
-            "          company_name Sanctioned Names          Status      matched_keywords  \\\n",
-            "0                   9g         No Match           error  No relevant keywords   \n",
-            "1  a.b.c. kickers bvba         No Match  ENT LP Stopped  No relevant keywords   \n",
-            "2       a.d. froidmont         No Match      EU Stopped                 court   \n",
-            "3        a.f. security         No Match      EU Stopped                   N/A   \n",
-            "4        a.f.m. new sa         No Match           error                   N/A   \n",
-            "\n",
-            "   Total_Score risk_level  \n",
-            "0         12.0       high  \n",
-            "1         10.0       high  \n",
-            "2         15.0       high  \n",
-            "3          5.0     medium  \n",
-            "4          2.0     medium  \n",
+            "No missing values detected.\n",
             "Preview of data to be inserted into MongoDB:\n",
             "[\n",
             "    {\n",
@@ -247,38 +215,38 @@
             "        \"Sanctioned Names\": \"No Match\",\n",
             "        \"Status\": \"error\",\n",
             "        \"matched_keywords\": \"No relevant keywords\",\n",
-            "        \"Total_Score\": 12.0,\n",
-            "        \"risk_level\": \"high\"\n",
+            "        \"Total_Score\": 2.0,\n",
+            "        \"risk_level\": \"medium\"\n",
             "    },\n",
             "    {\n",
             "        \"company_name\": \"a.b.c. kickers bvba\",\n",
             "        \"Sanctioned Names\": \"No Match\",\n",
             "        \"Status\": \"ENT LP Stopped\",\n",
             "        \"matched_keywords\": \"No relevant keywords\",\n",
-            "        \"Total_Score\": 10.0,\n",
-            "        \"risk_level\": \"high\"\n",
+            "        \"Total_Score\": 5.0,\n",
+            "        \"risk_level\": \"medium\"\n",
             "    },\n",
             "    {\n",
             "        \"company_name\": \"a.d. froidmont\",\n",
             "        \"Sanctioned Names\": \"No Match\",\n",
             "        \"Status\": \"EU Stopped\",\n",
             "        \"matched_keywords\": \"court\",\n",
-            "        \"Total_Score\": 15.0,\n",
-            "        \"risk_level\": \"high\"\n",
+            "        \"Total_Score\": 10.0,\n",
+            "        \"risk_level\": \"medium\"\n",
             "    },\n",
             "    {\n",
             "        \"company_name\": \"a.f. security\",\n",
             "        \"Sanctioned Names\": \"No Match\",\n",
             "        \"Status\": \"EU Stopped\",\n",
-            "        \"matched_keywords\": \"N/A\",\n",
+            "        \"matched_keywords\": \"No relevant keywords\",\n",
             "        \"Total_Score\": 5.0,\n",
             "        \"risk_level\": \"medium\"\n",
             "    },\n",
             "    {\n",
             "        \"company_name\": \"a.f.m. new sa\",\n",
             "        \"Sanctioned Names\": \"No Match\",\n",
-            "        \"Status\": \"error\",\n",
-            "        \"matched_keywords\": \"N/A\",\n",
+            "        \"Status\": \"not found in KBO data table\",\n",
+            "        \"matched_keywords\": \"No relevant keywords\",\n",
             "        \"Total_Score\": 2.0,\n",
             "        \"risk_level\": \"medium\"\n",
             "    }\n",
@@ -287,15 +255,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#Vizualization in the Mongo database link: https://charts.mongodb.com/charts-mongodb-pbuqwjz/public/dashboards/673dbfd4-c3c0-45fb-818c-bec4f2336c73"
-      ],
-      "metadata": {
-        "id": "R725HwlXvPLg"
-      }
     }
   ]
 }
