--- a/MongoDB and Visualization/Import_in_Mongo_and_visualize.ipynb
+++ b/MongoDB and Visualization/Import_in_Mongo_and_visualize.ipynb
@@ -255,6 +255,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Visualization in Mongo database link: https://charts.mongodb.com/charts-mongodb-pbuqwjz/public/dashboards/673dbfd4-c3c0-45fb-818c-bec4f2336c73"
+      ],
+      "metadata": {
+        "id": "haw52kmlBOBP"
+      }
     }
   ]
 }
