created in Colab

--- a/CompanyAnalysis.ipynb
+++ b/CompanyAnalysis.ipynb
@@ -284,9 +284,8 @@
         "sia = SentimentIntensityAnalyzer()\n",
         "\n",
         "# Load the file\n",
-        "file_path = 'BELGIUM_companies.csv'\n",
-        "df = pd.read_csv(file_path, encoding = 'utf-8' , low_memory=False)\n",
-        "company_names = df['OriginalCompanyName'][0:500].tolist()\n",
+        "df = pd.read_csv('res_sample_KBO.csv', low_memory=False, encoding='utf-8')\n",
+        "company_names = df['Name'][0:20].tolist()  # Processing the first 20 companies\n",
         "\n",
         "\n",
         "# Keywords and associated scores\n",
